# github-activity

./: README.md  task_tracker.py
active/github_activity/: README.md  pyproject.toml
active/github_activity/src/github_activity/: __init__.py
data_science_job_analysis/: data_science_job_analysis.ipynb  data_science_job_analysis.py
faceit_analysis/: get_match_history.py  get_player_stats.py  main.ipynb
