[project]
name = "github-activity"
version = "0.1.0"
description = ""
authors = [
    {name = "ChengHeEric",email = "hecheng050014@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "ruff (>=0.9.6,<0.10.0)"
]

[tool.poetry]
packages = [{include = "github_activity", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
